# simple

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  VERSION  bandit.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
.github/workflows/composite/conda-env-cache/: action.yml
scripts/common/: common.sh
scripts/conda/: create-env.sh  remove-conda-environment.sh
scripts/install/: clean  clean.sh  confirm-version  confirm-version.sh  install.sh  uninstall.sh
scripts/tests/: common.sh  coverage.sh  dev-test.sh  test-coverage.sh  test-demos  test-dev.sh  test-logs  test.sh
src/simple/: __init__.py  cli.py  config.ini  definitions.py
src/simple/analysis/: __init__.py  analysis.py
src/simple/common/: __init__.py  common.py
src/simple/config/: read_system_config.py  reader.py  readerclass.py  training_readme.txt
src/simple/crutem/: __init__.py  crutem.py
src/simple/data/: __init__.py  common.py  geopandas.py  pandas.py
src/simple/data/cubes/: __init__.py
src/simple/data/example/: __init__.py  example.py
src/simple/data/netcdf/: __init__.py
src/simple/data/tabular/: __init__.py  pandas.py
src/simple/demos/: __init__.py  demos.py
src/simple/io/: __init__.py  io.py
src/simple/logger/: __init__.py  log.py
src/simple/logging/: __init__.py  log.py
src/simple/netcdf/: __init__.py  data.py  tools.py
src/simple/prepare/: __init__.py  prepare.py
src/simple/resources/: github_config.ini  test_config.ini
src/simple/setup/: __init__.py  system_setup.py
src/simple/status/: __init__.py  checks.py
src/simple/workflow/: __init__.py  workflow.py
tests/: conftest.py  test_coverage.txt  test_readme.txt
tests/a_unit/: test_analysis.py  test_cli.py  test_common.py  test_definitions.py  test_prepare.py
tests/a_unit/analysis/: test_analysis.py
tests/a_unit/common/: test_common.py
tests/a_unit/config/: test_reader.py
tests/a_unit/data/: test_netcdf.py  test_tabular.py
tests/a_unit/demos/: test_demo_logs.py
tests/a_unit/io/: test_io.py
tests/a_unit/logger/: test_config_log.py  test_system_log.py
tests/a_unit/logging/: test_log.py
tests/a_unit/prepare/: test_prepare.py
tests/a_unit/setup/: test_system_setup.py
tests/b_integration/: test_analysis_analysis.py  test_cli.py  test_config_log.py  test_config_reader.py  test_demo_logs.py  test_io.py  test_logger.py  test_logging.py  test_resources.py  test_system_log.py
tests/c_end_to_end/: test_cli.py  test_demos.py
tests/d_user_interface/: __init__.py  test_cli.py  test_config_ini.py  test_demo.py  test_demos_cli.py  test_resources.py
tests/d_user_interface/cli/: test_cli.py
tests/d_user_interface/resources/: __init__.py  test_resources.py
tests/d_user_interface/version/: __init__.py  test_version.py
