# pyproject.toml

[project]
name = "simple"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]  # enable dynamic version numbering via seuptools_scm


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
#  keyword arguments to be supplied to get_version().
write_to = "src/simple/_version.py"

# [tool.pytest.ini_options]
# addopts = "--tb=long -vrA" # verbose output, displays short test summary info and includes traceback

# Set isort config for use by pre-commit so that it is compatible with black
[tool.isort]
profile = "black"
multi_line_output = 3

# Config for black
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # Example use: also separately exclude a file named foo.py in
                     # the root of the project
)
'''
